# BridgeLite

./: .dockerignore  .gitignore  Dockerfile  README.md  TPs_DataEngineering_M2_MLSD_Hamady_GACKOU.ipynb  make.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
01-Data-Engineering/BI/notebooks/: 05_Classification_R.ipynb
MLSD-25-26-Courses /BI/: 03_Data_Sampling_Distributions_R_.ipynb
MLSD-25-26-Courses/01-Data-Engineering/: TPs_DataEngineering_M2_MLSD_Hamady_GACKOU.ipynb
app/: api.py  cli.py  gazetteer.pkl  llm_fallback.py  merchants.py  model_sklearn.pkl  preproc.py  progress.py  rules.py  service.py  service_merchants.py
notebooks/: 01_eval_offline.ipynb
progress/: roadmap.yaml
reports/demo/: latency.txt  metrics.txt
reports/screenshots/: metrics.txt
requirements/: all.txt  all_pinned.txt  core.txt  dev.txt  llm.txt  notebooks.txt  packaging.txt  top_level.txt
scripts/: ci_local.ps1  docker_build_run.ps1  run_api.ps1
setup-info/: en-conv.md
tests/: test_api.py  test_gazetteer.py  test_merchants.py  test_preproc.py  test_rules.py  test_service.py
tools/: build_gazetteer.py  generate_synthetic_data.py  latency_probe.py  run_edge_cases.py  tau_sweep.py
training/: drift.py  eval.py  train.py
